--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "firebase-admin": "^13.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "spherical-geometry-js": "^3.0.2"
   },
   "scripts": {
-  "start": "node server.js",      
-  "dev": "nodemon server.js"      
-}
-
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  }
 }
